Update getJSON, it response all data when there are no keys in request
